--- a/gentelella/production/ketua/updatePengurusMasjid.html
+++ b/gentelella/production/ketua/updatePengurusMasjid.html
@@ -132,7 +132,11 @@
                           <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Jabatan <span class="required">*</span>
                           </label>
                           <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" id="first-name" required="required" class="form-control col-md-7 col-xs-12">
+                            <select class="form-control
+                                 col-md-7 col-xs-12" name="jabatanPengurus"><option value="Sekeretaris">Sekretaris</option>
+                                 <option value="Ketua">Ketua</option>
+                                 <option value="Bendahara">Bendahara</option>
+                                </select>
                           </div>
                         </div>
                         <div class="form-group">
