--- a/gentelella/production/sekretaris/mengelolaPemberiZakat.html
+++ b/gentelella/production/sekretaris/mengelolaPemberiZakat.html
@@ -190,7 +190,11 @@
                               <label class="control-label col-md-3 col-sm-3 col-xs-12">Jenis Zakat <span class="required">*</span>
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input id="birthday" class="date-picker form-control col-md-7 col-xs-12" required="required" type="text">
+                                <select class="form-control
+                                 col-md-7 col-xs-12" name="jenisZakat"><option value="Beras">Beras</option>
+                                 <option value="Uang">Uang</option>
+                                 
+                                </select>
                               </div>
                             </div>
                             <div class="form-group">
